Fourteenth major audit/cleanup pass — drew ±45° detents off-grid (minor=10°), stopped ACTION_CANCEL firing performClick, gated pixel grid on useSource (extracted shouldRenderSource), marked BrowserFastScroller non-important for a11y, consolidated busy teardown into EditorHost.finishBusy() clearing busy LAST on the UI thread (closing onNewIntent acquire-in-the-gap race; five controllers routed through it, releaseBusyAndHideProgress dropped), cancelled ruler momentum on busy (HDR angle skew), relabeled sort toggle 'A to Z / Z to A', authority-gated SafFileHelper docId/_data branches, added canonicalUnderStorage rejecting lexical .. and /mnt/, rolled ACTION_CANCEL back to gestureStartDegrees, stripped narration + inline FQNs across ~16 files, REQUIREMENTS.md at 19,548 LSLOC, plus new finishBusy/renderer/ruler/toolbar tests.